--- a/main.css
+++ b/main.css
@@ -62,9 +62,7 @@ h1 {
         padding: 16px 32px;
         text-align: center;
         text-decoration: none;
-        disp
-
-lay: none;
+        display: none;
         font-size: 16px;
         margin: 4px 2px;
         transition-duration: 0.4s;
